# cloud_resource_allocation

./: .gitignore  README.md  agent.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
.github/workflows/: docker.yml
app/: env.py  grader.py  main.py  models.py  simulator.py
server/: app.py
tasks/: easy.yaml  hard.yaml  medium.yaml
